--- a/nethely/index.html
+++ b/nethely/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="hu">
 <head>
@@ -20,11 +19,11 @@
   <h4>MSZC Kandó Kálmán Informatikai Technikum</h4>
   <h2>Kocsis Gergő</h2>
   <h5>1/13.C 2-es csoport</h5> 
-  <h5>3. csoport: Kocsis Gergő, Novák Ákos, Varga Bálint, Tóth Márk></h5> 
+  <h5>4. csoport: Kocsis Gergő, Novák Ákos, Tóth Márk, Varga Bálint</h5> 
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="http://kocsisg1.nhely.hu/">Home</a>
+  <a class="navbar-brand" href="http://szaboszabolcs.nhely.hu/">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -39,7 +38,7 @@
 	  <li class="nav-item">
 	  <a class="nav-link" href="https://github.com/">GitHub verziókezelő</a>
 	  </li>
-      <li class="nav-item">
+    <li class="nav-item">
 	  <a class="nav-link" href="http://takinfotaki.nhely.hu/projektmunka/">A 1/13.D 2.csoport Projektmunkái</a>
 	  </li>
 	  <li class="nav-item">
@@ -51,7 +50,10 @@
 	  <li class="nav-item">
 	  <a class="nav-link" href="/feladat/2_csoport.html" target="_blank" >A 2. csoport feladatai</a>
 	  </li>
-      </li>    
+    <li class="nav-item">
+      <a class="nav-link" href="valami.pdf" target="_blank" >FTP fáljkezelővel</a>
+    </li>
+   
     </ul>
   </div>  
 </nav>
@@ -225,9 +227,9 @@
 
 
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Készítette: Kocsis Gergő
+  <p>Készítette: Szabó Szabolcs
   <br>
-    2023
+    2021
    </p>
 </div>
 
