--- a/nethely/git/index.html
+++ b/nethely/git/index.html
@@ -55,6 +55,7 @@
 <div class="container">
 
 <center>
+  <p>Hugyák Tamás - Git verziókezelő - pdf</p>
 <embed src="github.pdf" width="800px" height="800px">
 </center>
 
@@ -63,8 +64,9 @@
 <h1>Oktató videók</h1>
 
 <div class="margo">
+  <center>SanFranciscobol jöttem - Git Alapismeretek - videó</center>
 <article class="row">
-    
+
         <div class="col-sm-6 col-lg-4"><iframe width="350" height="300" src="https://www.youtube.com/embed/XDKZu9kuEn8?si=2wTsqkKxFhwfuUeM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><h5>Git Alapismeretek 01. Bevezetés</h5></div>
         <div class="col-sm-6 col-lg-4"><iframe width="350" height="300" src="https://www.youtube.com/embed/_DpBYNQwQmU?si=XQBiCMS4GGBd0MpU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><h5>Git Alapismeretek 2. Verziókezelő fajták</h5></div>
         <div class="col-sm-6 col-lg-4"><iframe width="350" height="300" src="https://www.youtube.com/embed/nOmw00Yh_to?si=6Wq4ruaWBbPj8w8W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><h5>Git Alapismeretek 03. Git Init</h5></div>
