--- a/nethely/index.html
+++ b/nethely/index.html
@@ -21,7 +21,7 @@
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="http://kocsisg1.nhely.hu/">Home</a>
+  <a class="navbar-brand" href="http://kocsisg.nhely.hu/">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
