--- a/nethely/git/index.html
+++ b/nethely/git/index.html
@@ -27,7 +27,7 @@
   
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="http://kocsisg1.nhely.hu/">HOME</a>
+  <a class="navbar-brand" href="http://kocsisg.nhely.hu/">HOME</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -47,7 +47,10 @@
 	  </li>  
       <li class="nav-item">
         <a class="nav-link" href="https://github.com/vargab1" target="_blank">Varga Bálint</a>
-        </li>  
+      </li>  
+    <li class="nav-item">
+        <a class="nav-link" href="https://github.com" target="_blank">github.com</a>
+      </li>  
     </ul>
   </div>  
 </nav>
