--- a/nethely/scrum/index.html
+++ b/nethely/scrum/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-  <title>Novák Ákos oldala</title>
+  <title>Kocsis Gergő oldala</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bootstrap.min.css">
@@ -18,7 +18,7 @@
 
 <div class="jumbotron text-center" style="margin-bottom:0">
   <h4>MSZC Kandó Kálmán Informatikai Technikum</h4>
-  <h2>Novák Ákos</h2>
+  <h2>Kocsis Gergő</h2>
   <h5>1/13.C 2-es csoport</h5> 
   <h5>3. csoport: Novák Ákos, Kocsis Gergő, Tóth Márk, Varga Bálint</h5>   
   <h2>Scrum - Agilis szoftverfejlesztési módszer</h2>
@@ -26,7 +26,7 @@
   
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="http://novaka12.nhely.hu/">HOME</a>
+  <a class="navbar-brand" href="http://kocsisg.nhely.hu/">HOME</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -63,7 +63,7 @@
 </div>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
-    <p>Készítette: Novák Ákos
+    <p>Készítette: Kocsis Gergő
     <br>
       2023
      </p>
